<resources>
    <string name="app_name">Getbooks</string>
    <string name="txt_load">Loading...</string>
    <string name="facebook_app_id">1679090715497657</string>
    <string name="fb_login_protocol_scheme">fb1679090715497657</string>
    <string name="txt_library"> Library</string>
    <string name="txt_catalog">Catalog</string>
    <string name="txt_seek_bar_pages">21/324</string>
    <string name="txt_seek_bar_per">15%</string>
    <string name="txt_tutorial_main">מסכי הסבר זמינים לצפייה  \nגם מתפריט הגדרות</string>
    <string name="txt_tutorial_main_first">הגדרות \nכלליות</string>
    <string name="txt_tutorial_main_second">למסך \nראשי</string>
    <string name="txt_tutorial_main_third">הספרים \nשבחרת</string>
    <string name="txt_tutorial_main_four">מבחר \nספרים \nלהשאלה \nאו רכישה</string>
    <string name="txt_tutorial_main_five">הגדרות \nמערכת</string>
    <string name="txt_tutorial_first_page">אמה • ג’יין אוסטין</string>
    <string name="txt_tutorial_first_one">לחיצב ממושכת על \nהבחירה פותחת חלון צף</string>
    <string name="txt_tutorial_first_two">דיפדוף בין מסכי עזרה</string>
    <string name="txt_tutorial_first_three">לבחור צבע \nהדגשה</string>
    <string name="txt_tutorial_first_four">לשתף ציטוט</string>
    <string name="txt_tutorial_first_five">לכתוב הערה</string>
    <string name="txt_tutorial_first_six">למחוק הדגשה</string>
    <string name="txt_tutorial_float_one">לחיצה קצרה על דף ספר \nפותחת כפתורי שליטה</string>
    <string name="txt_tutorial_float_two">דיפדוף בין מסכי עזרה</string>
    <string name="txt_tutorial_float_three">הגדרות \nהספר</string>
    <string name="txt_tutorial_float_four">חיפוש</string>
    <string name="txt_tutorial_float_five">סימניות</string>
    <string name="txt_tutorial_float_six">לספרייה</string>
    <string name="txt_tutorial_float_bottom">מקומך \nבספר</string>
    <string name="txt_page_book_tutorial">אֵמָה ווּדהַאוּז הייתה יפה, חכמה ועשירה, היו לה בית נוח ומזג נעים, ודומה שנתברכה במיטב מעלות החיים גם יחד; מלאו לה כמעט עשרים ואחת שנים, ובתקופת חיים זו דברים מעטים בלבד הטרידו את מנוחתה או הכעיסו אותה.

היא הייתה הצעירה בשתי בנותיו של אב אוהב ומפנק עד מאוד, ובעקבות נישואי אחותה שימשה גבירת הבית מגיל צעיר למדי. אִמהּ מתה שנים רבות, רבות קודם לכן מכדי שתוכל לזכור בבירור את מגעה, ואת מקום האם מילאה אומנת שהייתה אישה נהדרת והרעיפה עליה חיבה לא פחותה מזו של אם.

שש־עשרה שנים בילתה העלמה טֵיילוֹר בקרב משפחתו של מר וודהאוז, פחות כאומנת ויותר כחברה, והיא רחשה אהבה רבה לשתי הבנות, אך לאֵמָה במיוחד. הקִרבה שנרקמה בין השתיים הייתה כקרבתן של אחיות. עוד לפני שחדלה העלמה טיילור מלשאת את תואר האומנת באופן רשמי, הִקשה עליה נועם מזגה להטיל מורא. וכיוון שצִלה של הסמכות כבר התפוגג מזמן, הן חיו יחדיו כשתי חברות הקשורות זו לזו בעבותות, ואֵמה עשתה ככל העולה על רוחה. היא רחשה הערכה רבה לשיקול דעתה של העלמה טיילור, אך הנחה אותה בעיקר שיקול דעתה שלה.\n\n

ואמנם, המגרעות במצבה של אמה היו יכולתה לעשות כרצונה יתר על המידה ונטייתה החזקה מדי להערכה עצמית מופרזת; אלו היו המגרעות שאיימו לפגום בהנאותיה הרבות, אך היא לא מצאה בהן כל דופי משום שבינתיים הייתה הסכנה סמויה מן העין.

והנה הגיעה עת צער — צער קל, שלא התגבש לכדי התבוננות פנימית מטרידה — העלמה טיילור נישאה, ואבדנה הוא שעורר את העצב. ביום חתונתה של חברתה האהובה ישבה אֵמה ולראשונה בחייה הרהרה נוגות בעתיד. עם תום החתונה והסתלקות האורחים נותרו אביה והיא לסעוד יחד, ללא ציפייה שיבוא אדם שלישי לרומם את רוחם בערב הארוך. אביה שכב לישון לאחר הארוחה, כהרגלו, והיא נותרה אפוא לשבת לבדה ולהגות באבדנה.\n\n

האירוע צפן בחובו אושר רב לחברתה; מר וֶסטוֹן היה אדם בעל אופי מצוין, היה לו ממון המאפשר חיים נוחים, הוא היה בגיל מתאים, והליכותיו היו נעימות. אֵמה חשה קורת רוח מסוימת כשהרהרה בכך שהיא עצמה ייחלה לשידוך הזה וקידמה אותו בחוסר אנוכיות ובנדיבות לב; ובכל זאת היה הבוקר הרה אסון עבורה. חסרונה של העלמה טיילור עתיד להיות מורגש  אֵמָה ווּדהַאוּז הייתה יפה, חכמה ועשירה, היו לה בית נוח ומזג נעים, ודומה שנתברכה במיטב מעלות החיים גם יחד; מלאו לה כמעט עשרים ואחת שנים, ובתקופת חיים זו דברים מעטים בלבד הטרידו את מנוחתה או הכעיסו אותה.

היא הייתה הצעירה בשתי בנותיו של אב אוהב ומפנק עד מאוד, ובעקבות נישואי אחותה שימשה גבירת הבית מגיל צעיר למדי. אִמהּ מתה שנים רבות, רבות קודם לכן מכדי שתוכל לזכור בבירור את מגעה, ואת מקום האם מילאה אומנת שהייתה אישה נהדרת והרעיפה עליה חיבה לא פחותה מזו של אם.\n\n

שש־עשרה שנים בילתה העלמה טֵיילוֹר בקרב משפחתו של מר וודהאוז, פחות כאומנת ויותר כחברה, והיא רחשה אהבה רבה לשתי הבנות, אך לאֵמָה במיוחד. הקִרבה שנרקמה בין השתיים הייתה כקרבתן של אחיות. עוד לפני שחדלה העלמה טיילור מלשאת את תואר האומנת באופן רשמי, הִקשה עליה נועם מזגה להטיל מורא. וכיוון שצִלה של הסמכות כבר התפוגג מזמן, הן חיו יחדיו כשתי חברות הקשורות זו לזו בעבותות, ואֵמה עשתה ככל העולה על רוחה. היא רחשה הערכה רבה לשיקול דעתה של העלמה טיילור, אך הנחה אותה בעיקר שיקול דעתה שלה.

\n\nואמנם, המגרעות במצבה של אמה היו יכולתה לעשות כרצונה יתר על המידה ונטייתה החזקה מדי להערכה עצמית מופרזת; אלו היו המגרעות שאיימו לפגום בהנאותיה הרבות, אך היא לא מצאה בהן כל דופי משום שבינתיים הייתה הסכנה סמויה מן העין.

והנה הגיעה עת צער — צער קל, שלא התגבש לכדי התבוננות פנימית מטרידה — העלמה טיילור נישאה, ואבדנה הוא שעורר את העצב. ביום חתונתה של חברתה האהובה ישבה אֵמה ולראשונה בחייה הרהרה נוגות בעתיד. עם תום החתונה והסתלקות האורחים נותרו אביה והיא לסעוד יחד, ללא ציפייה שיבוא אדם שלישי לרומם את רוחם בערב הארוך. אביה שכב לישון לאחר הארוחה, כהרגלו, והיא נותרה אפוא לשבת לבדה ולהגות באבדנה.

האירוע צפן בחובו אושר רב לחברתה; מר וֶסטוֹן היה אדם בעל אופי מצוין, היה לו ממון המאפשר חיים נוחים, הוא היה בגיל מתאים, והליכותיו היו נעימות. אֵמה חשה קורת רוח מסוימת כשהרהרה בכך שהיא עצמה ייחלה לשידוך הזה וקידמה אותו בחוסר אנוכיות ובנדיבות לב; ובכל זאת היה הבוקר הרה אסון עבורה. חסרונה של העלמה טיילור עתיד להיות מורגש </string>
    <string name="txt_tutorials_dialog">Do not show more these screens?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="error_connection">No internet connection</string>
    <string name="txt_about_us">About</string>
    <string name="txt_log_out">Log out</string>
    <string name="txt_lock">Service and Privacy</string>
    <string name="txt_messege">Instructions</string>
    <string name="txt_order_history">Question history</string>
    <string name="txt_hand_icon">Explanation screens</string>
    <string name="txt_rtl">left</string>
    <string name="emty_rented_list">You dont have rented books</string>
    <string name="empty_purchased_list">You dont have purchased books</string>
    <string name="txt_restart_dialog">Do you want restart downloading of books?</string>
    <string name="txt_about_us_full">Pelephone books הנה אפליקציית  קריאה דיגיטלית המאפשרת לך להשא מסתקרן עם ספרייה הפרטית שלך בא נשארים כל הספרים שרכשת או השאלת \n\n פונטים: פרוייקט קולמוס \n\n\n  www.pelephonebooks.co.il</string>
    <string name="txt_version">vers 3.0.1</string>
    <string name="txt_header_about">אודות</string>
    <string name="txt_btn_service_rigth">תנאי השירות</string>
    <string name="txt_btn_service_left">מדיניות פרטיות</string>
    <string name="txt_book_setting">Book Settings</string>
    <string name="txt_font">Font</string>
    <string name="txt_a_letter">a</string>
    <string name="txt_book_content">content</string>
    <string name="txt_book_murks_list">bookmarks</string>
    <string name="txt_highlights_list">highlights</string>
    <string name="txt_connection_fail">Network connection failure</string>
    <string name="from" />
    <string name="txt_log_out_question">Sign out?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_sign_out">Sign Out</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_delete_book_question">הספרים שנבחרו ימחקו ממכשירכם אך ימשיכו להיות נגישים בענן. האם ברצונכם להמשיך במחיקה?</string>
    <string name="rigth_txt_screen_sett">screen setting</string>
    <string name="rigth_txt_book_name">book name</string>
    <string name="rigth_txt_author_name">author name</string>
    <string name="rigth_txt_read_date">read date</string>
    <string name="rigth_txt_date_add">add date</string>
    <string name="rigth_txt_remove_books">remove books</string>
    <string name="rigth_txt_order">order</string>
    <string name="setting_dialog_yes">yes</string>
    <string name="setting_dialog_no">no</string>
    <string name="setting_dialog_txt_body">אני מסכים לקבל עדכונים על ספרים חדשים, קידומי מכירות והודעות מערכת</string>
    <string name="css_tag"><![CDATA[<link rel=\"stylesheet\" type=\"text/css\" href=\"%s\">]]></string>
    <string name="script_tag"><![CDATA[<script type=\"text/javascript\" src=\"%s\"></script>]]></string>
    <string name="td_tag"><![CDATA[<td>%s</td></tr>]]></string>
    <string name="tr_tag"><![CDATA[<tr><td></td><td>%s</td></tr>]]></string>
    <string name="pattern">\\{\\{(-?\\d+\\.?\\d*)\\,(-?\\d+\\.?\\d*)\\}\\,\\s\\{(-?\\d+\\.?\\d*)\\,(-?\\d+\\.?\\d*)\\}\\}</string>
    <string name="script_tag_method_call"><![CDATA[<script type=\"text/javascript\">%s</script>]]></string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="define">Define</string>
    <string name="highlight">Highlight</string>
    <string name="copied">Copied</string>
    <string name="send_to">Send to</string>
    <string name="getHighlightString">javascript:alert(getHighlightString(\'%s\'))</string>
    <string name="sethighlightstyle">javascript:alert(setHighlightStyle(\'%s\'));</string>
    <string name="hello">Hello World, EPubTestActivity!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_epub">Open</string>
    <string name="see_details">Move To The First</string>
    <string name="delete_epub">Delete</string>
    <string name="delete_cache">Delete Cached</string>
    <string name="book_title">Adventure</string>
    <string name="book_author">Loweice</string>
    <string name="sortOption">Sort Books</string>
    <string name="sortByTitle">By Title</string>
    <string name="sortByAuthor">By Author</string>
    <string name="sortByLastRead">By Last Read</string>
    <string name="sortByDownload">No Sort</string>
    <string name="setting">Setting</string>
    <string name="network">Network</string>
    <string name="allow3g4g">3G/4G Download</string>
    <string name="theme">Theme</string>
    <string name="themewhite">Theme White</string>
    <string name="themebrown">Theme Brown</string>
    <string name="themeblack">Theme Black</string>
    <string name="pagetransitioneffect">Page Transition Effect</string>
    <string name="noneeffect">None</string>
    <string name="slideeffect">Slide Effect</string>
    <string name="curleffect">Curl Effect</string>
    <string name="layout">Layout</string>
    <string name="doublepaged">Double Paged For Landscape</string>
    <string name="lockrotation">Lock Rotation</string>
    <string name="information">Information</string>
    <string name="reader">SkyReader version 1.0</string>
    <string name="skyepub">Powered By SkyEpub for Android</string>
    <string name="title_activity_setting">Setting</string>
    <string name="globalPagination">Global Pagination</string>
    <string name="searchhint">Type Words To Search</string>
    <string name="contents">contents</string>
    <string name="bookmark">bookmark</string>
    <string name="note">Note</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="chara">A</string>
    <string name="searchmore">Search More</string>
    <string name="searchfinished">Search Finished</string>
    <string name="searchfound">found</string>
    <string name="delete">Delete</string>
    <string name="tts">Text To Speech</string>
    <string name="warning">Warning</string>
    <string name="voice">Voice</string>
    <string name="mediaoverlay">MediaOverlay</string>
    <string name="autostartplaying">Auto Start Playing</string>
    <string name="autoloadnewchapter">Auto Load New Chapter</string>
</resources>