<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/txt_tutorials_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_tutorials_dialog"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_6" />

    <Button
        android:id="@+id/txt_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_yes" />

    <Button
        android:id="@+id/txt_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_no" />
</LinearLayout>