<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/menu_book"
        layout="@layout/menu_book_layout" />

    <TextView
        android:id="@+id/txt_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_book"
        android:background="@color/gray_light"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingTop="3dp"
        android:text="@string/txt_tutorial_first_page"
        android:textColor="@color/color_black" />

    <include
        android:id="@+id/seek_bar_menu"
        layout="@layout/menu_seek_bar_layout" />

    <ImageView
        android:id="@+id/img_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/seek_bar_menu"
        android:layout_below="@id/txt_page"
        android:background="@drawable/text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_translucent">

        <TextView
            android:id="@+id/txt_tutorial_first"
            style="@style/TutorialTextStyle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_biggest"
            android:text="@string/txt_tutorial_first_one" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_50dp"
            android:layout_toRightOf="@id/txt_tutorial_first"
            android:src="@drawable/hand_btn" />

        <ImageView
            android:id="@+id/img_tutorial_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tutorial_first"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_40dp"
            android:src="@drawable/tutorial_menu" />

        <ImageView
            android:id="@+id/img_tutorial_arrow_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/img_tutorial_menu"
            android:layout_below="@id/img_tutorial_menu"
            android:src="@drawable/tutorial_arrow_2" />

        <TextView
            android:id="@+id/txt_tutorial_arrow_one"
            style="@style/TutorialTextStyle"
            android:layout_alignRight="@id/img_tutorial_arrow_one"
            android:layout_below="@id/img_tutorial_arrow_one"
            android:text="@string/txt_tutorial_first_three" />

        <ImageView
            android:id="@+id/img_tutorial_arrow_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_tutorial_menu"
            android:layout_marginLeft="@dimen/margin_50dp"
            android:layout_toRightOf="@id/img_tutorial_arrow_one"
            android:src="@drawable/tutorial_arrow_4" />

        <TextView
            android:id="@+id/txt_arrow_five"
            style="@style/TutorialTextStyle"
            android:layout_below="@id/img_tutorial_arrow_two"
            android:layout_marginLeft="@dimen/margin_smallest"
            android:layout_toRightOf="@id/img_tutorial_arrow_one"
            android:text="@string/txt_tutorial_first_five" />

        <ImageView
            android:id="@+id/img_tutorial_arrow_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/img_tutorial_menu"
            android:layout_below="@id/img_tutorial_menu"
            android:src="@drawable/tutorial_arrow_5" />

        <TextView
            style="@style/TutorialTextStyle"
            android:layout_alignLeft="@id/img_tutorial_arrow_four"
            android:layout_below="@id/img_tutorial_arrow_four"
            android:text="@string/txt_tutorial_first_four" />

        <ImageView
            android:id="@+id/img_tutorial_arrow_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_tutorial_menu"
            android:layout_marginRight="@dimen/margin_40dp"
            android:layout_toLeftOf="@id/img_tutorial_arrow_four"
            android:src="@drawable/tutorial_arrow_3" />

        <TextView
            style="@style/TutorialTextStyle"
            android:layout_below="@id/img_tutorial_arrow_three"
            android:layout_toRightOf="@id/txt_arrow_five"
            android:text="@string/txt_tutorial_first_six" />

        <ImageView style="@style/TutorialCloseImgageStyle" />

        <ImageView
            android:id="@+id/img_hand_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_50dp"
            android:layout_marginLeft="@dimen/margin_50dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:src="@drawable/hand_arrows" />

        <TextView
            style="@style/TutorialTextStyle"
            android:layout_above="@id/img_hand_arrow"
            android:layout_marginLeft="@dimen/margin_smallest"
            android:text="@string/txt_tutorial_first_two" />

    </RelativeLayout>

</RelativeLayout>